[project]
name = "discrete_mpc"
version = "0.1.0"
description = ""
authors = [
    {name = "masudasatoki",email = "bananaboyfriend123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ray (>=2.46.0,<3.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "graphillion (>=2.1,<3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
